--- a/registrationpage.html
+++ b/registrationpage.html
@@ -1,110 +1,267 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ReWear - Registration</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ReWear - Register</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
     <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f4f4f9;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
 
-        .registration-container {
-            background-color: rgba(0, 0, 0, 0.8);
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            width: 300px;
-            color: white;
-            text-align: center;
-        }
+      body {
+        font-family: "Poppins", sans-serif;
+        height: 100vh;
+        background: linear-gradient(-45deg, #0d1b2a, #1b263b, #274472, #102542);
+        background-size: 400% 400%;
+        animation: auroraFlow 15s ease infinite;
+        overflow: hidden;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+      }
 
-        .registration-container h2 {
-            margin-bottom: 20px;
-            color: #4CAF50;
+      @keyframes auroraFlow {
+        0% {
+          background-position: 0% 50%;
         }
+        50% {
+          background-position: 100% 50%;
+        }
+        100% {
+          background-position: 0% 50%;
+        }
+      }
 
-        .registration-container input[type="text"],
-        .registration-container input[type="password"],
-        .registration-container input[type="email"] {
-            width: 100%;
-            padding: 10px;
-            margin: 10px 0;
-            border: none;
-            border-radius: 5px;
-            box-sizing: border-box;
-        }
+      .glow-circle {
+        position: absolute;
+        width: 300px;
+        height: 300px;
+        border-radius: 50%;
+        background: radial-gradient(
+          circle,
+          rgba(30, 144, 255, 0.4) 0%,
+          rgba(0, 0, 0, 0) 70%
+        );
+        animation: floatGlow 8s linear infinite;
+        z-index: 0;
+      }
 
-        .registration-container input[type="submit"] {
-            width: 100%;
-            padding: 10px;
-            margin: 10px 0;
-            border: none;
-            border-radius: 5px;
-            background-color: #4CAF50;
-            color: white;
-            font-size: 16px;
-            cursor: pointer;
+      @keyframes floatGlow {
+        0% {
+          top: 10%;
+          left: 5%;
         }
+        25% {
+          top: 30%;
+          left: 80%;
+        }
+        50% {
+          top: 60%;
+          left: 40%;
+        }
+        75% {
+          top: 20%;
+          left: 70%;
+        }
+        100% {
+          top: 10%;
+          left: 5%;
+        }
+      }
 
-        .registration-container input[type="submit"]:hover {
-            background-color: #45a049;
-        }
+      .register-container {
+        position: relative;
+        z-index: 1;
+        background: rgba(0, 0, 0, 0.7);
+        backdrop-filter: blur(6px);
+        padding: 40px 30px;
+        width: 400px;
+        border-radius: 20px;
+        color: rgba(255, 255, 255, 0.95);
+        text-align: center;
+        overflow: hidden;
+        box-shadow: 0 0 15px rgba(255, 255, 255, 0.2),
+          0 0 30px rgba(30, 144, 255, 0.4), 0 0 60px rgba(30, 144, 255, 0.2);
+      }
 
-        .logo {
-            margin-bottom: 20px;
-        }
+      .register-container::before {
+        content: "";
+        position: absolute;
+        top: -2px;
+        left: -2px;
+        right: -2px;
+        bottom: -2px;
+        background: linear-gradient(270deg, #1e90ff, #ffffff, #1e90ff);
+        background-size: 600% 600%;
+        animation: border-glow 5s linear infinite;
+        z-index: -1;
+        border-radius: 22px;
+        filter: blur(4px);
+      }
 
-        .logo img {
-            width: 80px;
-            height: 80px;
-            border-radius: 50%;
-            border: 2px solid #4CAF50;
+      @keyframes border-glow {
+        0% {
+          background-position: 0% 50%;
         }
+        50% {
+          background-position: 100% 50%;
+        }
+        100% {
+          background-position: 0% 50%;
+        }
+      }
 
-        .social-login {
-            margin: 20px 0;
-        }
+      .logo {
+        margin-bottom: 25px;
+      }
+      .fade-out {
+        animation: fadeOut 0.6s ease forwards;
+      }
 
-        .social-login button {
-            background-color: #3b5998;
-            color: white;
-            border: none;
-            padding: 10px 15px;
-            border-radius: 5px;
-            cursor: pointer;
-            margin: 5px;
+      @keyframes fadeOut {
+        to {
+          opacity: 0;
         }
+      }
 
-        .social-login button:hover {
-            background-color: #304884;
-        }
+      .logo img {
+        width: 90px;
+        height: 90px;
+        border-radius: 50%;
+        border: 3px solid #1e90ff;
+      }
+
+      .register-container h2 {
+        margin-bottom: 20px;
+        font-weight: 600;
+        font-size: 22px;
+        color: #ffffff;
+        text-shadow: 0 0 3px rgba(0, 0, 0, 0.6);
+      }
+
+      .register-container input {
+        width: 100%;
+        padding: 12px;
+        margin: 10px 0;
+        border: none;
+        border-radius: 8px;
+        font-size: 14px;
+      }
+
+      .register-container input[type="submit"] {
+        background-color: #1e90ff;
+        color: white;
+        font-weight: bold;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+      }
+
+      .register-container input[type="submit"]:hover {
+        background-color: #1c86ee;
+      }
+
+      .social-buttons {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        margin-top: 20px;
+      }
+
+      .social-button {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 10px;
+        font-size: 14px;
+        border-radius: 6px;
+        border: none;
+        cursor: pointer;
+        font-weight: 600;
+      }
+
+      .google-btn {
+        background-color: #ffffff;
+        color: #333;
+      }
+
+      .facebook-btn {
+        background-color: #1877f2;
+        color: white;
+      }
+
+      .social-button img {
+        width: 20px;
+        height: 20px;
+        margin-right: 8px;
+      }
+
+      .divider {
+        margin-top: 20px;
+        color: rgba(255, 255, 255, 0.6);
+      }
     </style>
-</head>
-<body>
-    <div class="registration-container">
-        <div class="logo">
-            <img src="https://example.com/path-to-your-logo.png" alt="ReWear Logo">
+  </head>
+  <body>
+    <div class="glow-circle"></div>
+
+    <div class="register-container">
+      <div class="logo">
+        <img src="Images/ReWear_logo.png" alt="ReWear Logo" />
+      </div>
+      <h2>Create Your Account</h2>
+      <form>
+        <input type="text" placeholder="Full Name" required />
+        <input type="email" placeholder="Email Address" required />
+        <input type="text" placeholder="Username" required />
+        <input type="password" placeholder="Password" required />
+        <input type="submit" value="Register" />
+      </form>
+
+      <div class="divider">or register with</div>
+
+      <div class="social-buttons">
+        <button class="social-button google-btn">
+          <img
+            src="https://www.svgrepo.com/show/355037/google.svg"
+            alt="Google"
+          />
+          Continue with Google
+        </button>
+        <button class="social-button facebook-btn">
+          <img
+            src="https://www.svgrepo.com/show/475647/facebook-color.svg"
+            alt="Facebook"
+          />
+          Continue with Facebook
+        </button>
+        <div style="margin-top: 15px">
+          <span>Already have an account?</span>
+          <a href="loginpage.html">Login</a>
         </div>
-        <h2>Register</h2>
-        <form action="/dashboard" method="post">
-            <input type="text" placeholder="Username" required>
-            <input type="email" placeholder="Email" required>
-            <input type="password" placeholder="Password" required>
-            <input type="password" placeholder="Confirm Password" required>
-            <input type="submit" value="Register">
-        </form>
-        <div class="social-login">
-            <p>Or register with:</p>
-            <button>Facebook</button>
-            <button style="background-color: #db4437;">Google</button>
-        </div>
+      </div>
     </div>
-</body>
+    <script>
+      document.querySelectorAll("a").forEach((link) => {
+        link.addEventListener("click", function (e) {
+          const href = this.getAttribute("href");
+
+          if (href.endsWith(".html")) {
+            e.preventDefault();
+            document.body.classList.add("fade-out");
+            setTimeout(() => {
+              window.location.href = href;
+            }, 500); // Wait for animation
+          }
+        });
+      });
+    </script>
+  </body>
 </html>
